comparing Apple CPU vs GPU performance

--- a/code/pytorch_gpu_test.ipynb
+++ b/code/pytorch_gpu_test.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# Imports\n",
+    "\n",
+    "Test the performance of pytorch on a Macbook M1 with cpu and gpu"
    ]
   },
   {
@@ -57,13 +59,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.2 ms ± 771 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "34.2 ms ± 3.08 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit  -n 100\n",
-    "x * y\n"
+    "x * y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, the 100 iterations took 34.2ms using M1 CPU"
    ]
   },
   {
@@ -85,13 +94,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19.4 ms ± 3.47 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "20.6 ms ± 3.39 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit  -n 100\n",
     "x * y\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The apple GPU (mps) took 20.6ms for 100 iterations."
    ]
   },
   {
@@ -104,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "dl-dev",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
