--- a/code/1. pytorch_introduction.ipynb
+++ b/code/1. pytorch_introduction.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook touch upon basics of PyTorch, a polupar deep learning library for defining and training neural networks.\n",
+    "\n",
+    "For start, we will import the package called `torch`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -11,7 +20,6 @@
    },
    "outputs": [],
    "source": [
-    "# from __future__ import print_function\n",
     "import torch"
    ]
   },
@@ -19,13 +27,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Tensors\n",
-    "- Tensors are similar to NumPy’s ndarrays, with the addition being that Tensors can also be used on a GPU to accelerate computing."
+    "## Tensors\n",
+    "\n",
+    "Tensors are similar to NumPy’s ndarrays, with the addition being that Tensors can also be used on a GPU to accelerate computing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define a tensor\n",
+    "scaler = torch.tensor(1)\n",
+    "print(scaler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1, 2, 3]),\n",
+       " tensor([[1, 2, 3],\n",
+       "         [4, 5, 6]]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can also define a tensor with a list\n",
+    "vector = torch.tensor([1, 2, 3])\n",
+    "\n",
+    "# we can also define a tensor with a list of lists\n",
+    "matrix = torch.tensor([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "vector, matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-09-26T05:25:36.979215Z",
@@ -37,11 +93,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 3.0245e+35,  1.4153e-43,  4.6058e-38],\n",
-      "        [ 3.4438e-41,  2.9147e-43,  0.0000e+00],\n",
-      "        [-2.5270e+24,  4.5811e-41, -1.9227e+02],\n",
-      "        [ 4.5811e-41,  0.0000e+00,  7.0065e-45],\n",
-      "        [-4.7915e+24,  4.5811e-41, -4.7915e+24]])\n"
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n"
      ]
     }
    ],
@@ -53,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-09-26T05:25:42.620271Z",
@@ -64,25 +120,25 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 3.0245e+35,  1.4153e-43,  4.6058e-38],\n",
-       "        [ 3.4438e-41,  2.9147e-43,  0.0000e+00],\n",
-       "        [-2.5270e+24,  4.5811e-41, -1.9227e+02],\n",
-       "        [ 4.5811e-41,  0.0000e+00,  7.0065e-45],\n",
-       "        [-4.7915e+24,  4.5811e-41, -4.7915e+24]])"
+       "tensor([[0.3311, 0.0904, 0.0078],\n",
+       "        [0.1369, 0.3141, 0.0858],\n",
+       "        [0.8278, 0.8451, 0.3780]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "# we can define a tensor with random values\n",
+    "random_matrix = torch.rand(3, 3)\n",
+    "random_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-09-26T05:25:47.396352Z",
@@ -96,46 +152,41 @@
        "torch.Tensor"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(x)"
+    "# check the type of the tensor\n",
+    "# this will tell the type of variable random_matrix\n",
+    "type(random_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-06T05:00:35.551248Z",
-     "start_time": "2020-09-06T05:00:35.518133Z"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.8690, 0.5917, 0.0377],\n",
-      "        [0.4982, 0.5919, 0.2020],\n",
-      "        [0.6017, 0.7287, 0.9890],\n",
-      "        [0.8774, 0.5035, 0.3504],\n",
-      "        [0.0927, 0.2968, 0.9060]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Random initialized array or matrix\n",
-    "x = torch.rand(5, 3)\n",
-    "print(x)"
+    "# this will tell the type of data the tensor holds\n",
+    "random_matrix.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T05:01:03.476696Z",
@@ -156,65 +207,15 @@
     }
    ],
    "source": [
-    "# Construct a matrix filled zeros and of dtype long\n",
+    "# we can also specify the data type while defining a tensor\n",
+    "# construct a matrix filled zeros and of dtype long\n",
     "x = torch.zeros(5, 3, dtype=torch.long)\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-06T05:01:26.210916Z",
-     "start_time": "2020-09-06T05:01:26.202383Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([5.5000, 3.0000])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Construct a tensor directly from data:\n",
-    "x = torch.tensor([5.5, 3])\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-06T05:32:17.408331Z",
-     "start_time": "2020-09-06T05:32:17.399779Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.]], dtype=torch.float64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = x.new_ones(5, 3, dtype=torch.double)      # new_* methods take in sizes\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T05:32:48.444257Z",
@@ -226,11 +227,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.2191,  0.3047, -0.9346],\n",
-      "        [ 0.6543,  0.2372,  0.0234],\n",
-      "        [ 0.5261,  0.6155, -0.1585],\n",
-      "        [-0.2751, -0.2340,  2.4734],\n",
-      "        [ 0.9938, -0.8391,  0.3855]])\n"
+      "tensor([[ 2.8661, -1.3088,  0.4643],\n",
+      "        [ 0.0403,  2.6126, -0.0791],\n",
+      "        [-0.0386, -0.8369, -0.3959],\n",
+      "        [ 0.2016, -1.3255, -3.7359],\n",
+      "        [ 0.5319,  0.6995, -0.2352]])\n"
      ]
     }
    ],
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T05:33:04.692334Z",
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T05:33:32.877059Z",
@@ -277,7 +278,7 @@
        "torch.Size([5, 3])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,12 +291,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Operations"
+    "## Operations on tensors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T05:35:06.479541Z",
@@ -307,16 +308,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7704, 0.2157, 0.5113],\n",
-      "        [0.0395, 0.0694, 0.5740],\n",
-      "        [0.8084, 0.4592, 0.6681],\n",
-      "        [0.6030, 0.1920, 0.4003],\n",
-      "        [0.0042, 0.7863, 0.8625]])\n",
-      "tensor([[0.2968, 0.8698, 0.9908],\n",
-      "        [0.6065, 0.7885, 0.7999],\n",
-      "        [0.7248, 0.9544, 0.1616],\n",
-      "        [0.1488, 0.1165, 0.9041],\n",
-      "        [0.9522, 0.9528, 0.6864]])\n"
+      "tensor([[0.8120, 0.1492, 0.4794],\n",
+      "        [0.6041, 0.6443, 0.2288],\n",
+      "        [0.8167, 0.7432, 0.7590],\n",
+      "        [0.2053, 0.0927, 0.4814],\n",
+      "        [0.9049, 0.5655, 0.5903]])\n",
+      "tensor([[0.7594, 0.9219, 0.0617],\n",
+      "        [0.0631, 0.3570, 0.6223],\n",
+      "        [0.1765, 0.5563, 0.2319],\n",
+      "        [0.7560, 0.0286, 0.7029],\n",
+      "        [0.2320, 0.4803, 0.0755]])\n"
      ]
     }
    ],
@@ -341,11 +342,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1.0672, 1.0855, 1.5021],\n",
-      "        [0.6460, 0.8579, 1.3739],\n",
-      "        [1.5332, 1.4136, 0.8297],\n",
-      "        [0.7518, 0.3084, 1.3044],\n",
-      "        [0.9564, 1.7391, 1.5489]])\n"
+      "tensor([[1.5714, 1.0711, 0.5411],\n",
+      "        [0.6672, 1.0013, 0.8511],\n",
+      "        [0.9932, 1.2994, 0.9909],\n",
+      "        [0.9613, 0.1212, 1.1844],\n",
+      "        [1.1370, 1.0458, 0.6658]])\n"
      ]
     }
    ],
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T05:35:59.074285Z",
@@ -368,11 +369,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1.0672, 1.0855, 1.5021],\n",
-      "        [0.6460, 0.8579, 1.3739],\n",
-      "        [1.5332, 1.4136, 0.8297],\n",
-      "        [0.7518, 0.3084, 1.3044],\n",
-      "        [0.9564, 1.7391, 1.5489]])\n"
+      "tensor([[1.5714, 1.0711, 0.5411],\n",
+      "        [0.6672, 1.0013, 0.8511],\n",
+      "        [0.9932, 1.2994, 0.9909],\n",
+      "        [0.9613, 0.1212, 1.1844],\n",
+      "        [1.1370, 1.0458, 0.6658]])\n"
      ]
     }
    ],
@@ -395,17 +396,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1.0672, 1.0855, 1.5021],\n",
-      "        [0.6460, 0.8579, 1.3739],\n",
-      "        [1.5332, 1.4136, 0.8297],\n",
-      "        [0.7518, 0.3084, 1.3044],\n",
-      "        [0.9564, 1.7391, 1.5489]])\n"
+      "tensor([[1.5714, 1.0711, 0.5411],\n",
+      "        [0.6672, 1.0013, 0.8511],\n",
+      "        [0.9932, 1.2994, 0.9909],\n",
+      "        [0.9613, 0.1212, 1.1844],\n",
+      "        [1.1370, 1.0458, 0.6658]])\n"
      ]
     }
    ],
    "source": [
     "# Store addition in the ouput tensor\n",
-    "result = torch.empty(5, 3)\n",
+    "result = torch.zeros(5, 3)\n",
     "torch.add(x, y, out=result)\n",
     "print(result)"
    ]
@@ -431,11 +432,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1.0672, 1.0855, 1.5021],\n",
-      "        [0.6460, 0.8579, 1.3739],\n",
-      "        [1.5332, 1.4136, 0.8297],\n",
-      "        [0.7518, 0.3084, 1.3044],\n",
-      "        [0.9564, 1.7391, 1.5489]])\n"
+      "tensor([[1.5714, 1.0711, 0.5411],\n",
+      "        [0.6672, 1.0013, 0.8511],\n",
+      "        [0.9932, 1.2994, 0.9909],\n",
+      "        [0.9613, 0.1212, 1.1844],\n",
+      "        [1.1370, 1.0458, 0.6658]])\n"
      ]
     }
    ],
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T05:39:32.738708Z",
@@ -459,20 +460,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.2157, 0.0694, 0.4592, 0.1920, 0.7863])\n",
-      "tensor([0.0395, 0.0694, 0.5740])\n"
+      "tensor([0.1492, 0.6443, 0.7432, 0.0927, 0.5655])\n",
+      "tensor([0.6041, 0.6443, 0.2288])\n"
      ]
     }
    ],
    "source": [
-    "# You can use standard NumPy-like indexing with all bells and whistles!\n",
+    "# You can use standard NumPy-like indexing\n",
     "print(x[:, 1])\n",
     "print(x[1, :])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T06:44:25.551628Z",
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T06:45:23.954871Z",
@@ -509,8 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.0317])\n",
-      "-0.031716205179691315\n"
+      "tensor([-0.0538])\n",
+      "-0.05384691432118416\n"
      ]
     }
    ],
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T06:47:15.431764Z",
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T06:47:21.965275Z",
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T06:47:37.384856Z",
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T06:49:01.679687Z",
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T06:51:26.264505Z",
@@ -653,15 +654,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.8120, 1.1492, 1.4794],\n",
+      "        [1.6041, 1.6443, 1.2288],\n",
+      "        [1.8167, 1.7432, 1.7590],\n",
+      "        [1.2053, 1.0927, 1.4814],\n",
+      "        [1.9049, 1.5655, 1.5903]], device='mps:0')\n",
+      "tensor([[1.8120, 1.1492, 1.4794],\n",
+      "        [1.6041, 1.6443, 1.2288],\n",
+      "        [1.8167, 1.7432, 1.7590],\n",
+      "        [1.2053, 1.0927, 1.4814],\n",
+      "        [1.9049, 1.5655, 1.5903]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let us run this cell only if Apple GPU is available\n",
+    "# We will use ``torch.device`` objects to move tensors in and out of GPU\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")  # a Metal Performance Shaders device object\n",
+    "    y = torch.ones_like(x, device=device)  # directly create a tensor on GPU\n",
+    "    x = x.to(device)  # or just use strings ``.to(\"mps\")``\n",
+    "    z = x + y\n",
+    "    print(z)\n",
+    "    print(z.to(\"cpu\", torch.float))  # ``.to`` can also change dtype together!"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Autograd"
+    "## Autograd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T12:04:07.210164Z",
@@ -686,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T12:04:30.058025Z",
@@ -711,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T12:05:09.949408Z",
@@ -740,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T12:05:53.951740Z",
@@ -755,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T12:06:00.532039Z",
@@ -769,7 +804,7 @@
        "tensor(27., grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-06T12:06:22.179369Z",
@@ -803,26 +838,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. Neural Networks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A typical training procedure for a neural network is as follows:\n",
-    "- Define the neural network that has some learnable parameters (or weights)\n",
-    "- Iterate over a dataset of inputs\n",
-    "- Process input through the network\n",
-    "- Compute the loss (how far is the output from being correct)\n",
-    "- Propagate gradients back into the network’s parameters\n",
-    "- Update the weights of the network, typically using a simple update rule: weight = weight - learning_rate * gradient"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -833,7 +848,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dl-dev",
    "language": "python",
    "name": "python3"
   },
@@ -847,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.13"
   },
   "toc": {
    "base_numbering": 1,
